<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black50"
    android:id="@+id/popup">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >


        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bgr"
            android:text="@string/most_useful_text"
            android:textColor="@color/purple" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black50" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bgr"
            android:text="@string/recent_post_text"
            android:textColor="@color/purple" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black50" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bgr"
            android:text="@string/my_useful_text"
            android:textColor="@color/purple" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black50" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bgr"
            android:text="@string/my_post_text"
            android:textColor="@color/purple" />
    </LinearLayout>

</RelativeLayout>